[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/actors/actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/actors/enemy/enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/actors/enemy/states/enemy_walking.gd" type="Script" id=3]
[ext_resource path="res://scenes/actors/enemy/states/enemy_attacking.gd" type="Script" id=4]
[ext_resource path="res://scenes/actors/enemy/states/enemy_scanning.gd" type="Script" id=5]
[ext_resource path="res://scenes/dialog/speech_bubble.tscn" type="PackedScene" id=6]

[node name="zombie" instance=ExtResource( 1 )]
collision_layer = 4
script = ExtResource( 2 )

[node name="body" parent="." index="0"]
modulate = Color( 0.168627, 0.686275, 0.109804, 1 )

[node name="hands" parent="." index="4"]
editor/display_folded = true
modulate = Color( 0.168627, 0.686275, 0.109804, 1 )

[node name="stateMachine" parent="." index="6"]
disabled = true

[node name="walking" type="Node" parent="stateMachine" index="0"]
script = ExtResource( 3 )
is_starting_state = false

[node name="attacking" type="Node" parent="stateMachine" index="1"]
script = ExtResource( 4 )

[node name="scanning" type="Node" parent="stateMachine" index="2"]
script = ExtResource( 5 )
is_starting_state = true

[node name="hitbox" parent="." index="8"]
collision_layer = 4
collision_mask = 8

[node name="speech_bubble" parent="." index="9" instance=ExtResource( 6 )]
margin_top = -37.0
margin_bottom = -37.0

[node name="VisibilityEnabler2D" type="VisibilityNotifier2D" parent="." index="10"]

[node name="RayCast2D" type="RayCast2D" parent="." index="11"]
cast_to = Vector2( 0, 0 )
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]

[editable path="hands"]
